Downloaded existing dataset of jokes

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parsing the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initially the idea was to use Reddit API to parse all posts r/Jokes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +28,13 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "from pprint import pprint\n",
-    "import csv"
+    "import csv\n",
+    "import textwrap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,51 +76,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Politicians\n",
-      "A politician visited a village and asked what their needs were.  ”We have 2 basic needs sir,” replied the villager.  “Firstly, we have a hospital, but there’s no doctor.”  On hearing this, politician whipped out his cellphone, and after speaking for a while he reassured the village leader that the doctor would be there the next day. He then asked about the second problem.  “Secondly sir, there is no cellphone coverage anywhere in this village.”\n",
+      "Sad News: The founder of /r/jokes has passed away\n",
+      "RIP Larry Tesler, the UI designer that created Cut, Copy and Paste, died age 74\n",
       "\n",
-      "I just learned that someone in Chicago gets stabbed every 2 minutes.\n",
-      "Poor guy\n",
+      "Calm down about the Net Neutrality thing...\n",
+      "Paying additional money to access certain sites will give you a sense of pride\n",
+      "and accomplishment.\n",
       "\n",
-      "Shortly after he got divorced...\n",
-      "A friend asked Paul McCartney \"would you ever go down on one knee again?\"  \"I'd prefer if you called her Heather,\" Paul replied.\n",
+      "V\n",
+      "V  *Edit: seems like the ctrl key on my keyboard is not working\n",
       "\n",
-      "A man heard that Mr. Swordy is the best swordsman in the world.\n",
-      "A man heard that Mr. Swordy is the best swordsman in the world  He asked ppl where to find him and they told him he lives in Swordville. He goes there and finds a swordsman standing while a bee flying by him so he took his sword and in one swing the bee is cut into perfect two halves. The man said happily you must be Mr. Swordy but the swordsman said: “I wish, I’m nothing compared to Mr. Swordy. Go there and you might find him.” The man continues his journey and finds another swordsman while a fly flying by him. The 2nd swordsman man swings his sword and in one blow he cuts the fly into two perfect halves. The man said you’re definitely Mr. Swordy but the 2nd sowrdsman says “I wish, I’m nothing compared to Mr. Swordy. You see the guy over there, thats him” So the man goes there and while Mr. Swordy standing a mosquito flies by him and he gives it one swing but to the astonishment of the man the mosquito keeps flying. He said: “How come you’re the best swordsman alive while you couldn’t hit the mosquito” Mr. Swordy said: “You can spit on my grave if this mosquito gets more children”\n",
+      "If your surprised that Jeffrey Epstein commited suicide this morning\n",
+      "Imagine how surprised he must have been.  Edit: Thank you to the Redditors that\n",
+      "awarded this post. To everybody else I’m sorry I typed your instead of you’re.\n",
       "\n",
-      "Vow of silence\n",
-      "A woman joins a convent, and as part of her induction, she takes a vow of silence, other than prayer.  Mother Superior makes this quite clear, and says other than at times such as this, where she is required to speak to new Sisters, there are very few exceptions, and normally only once per year are the Sisters allowed to speak, and then minimally.  The new sister agrees to everything, and begins her new, silent life.  After a year, Mother Superior lets the new sister know she will get 2 words during her anniversary day.  Sister considers carefully, and after a few minutes contemplation, says to Mother Superior, \"Cold Food.\"  Mother Superior nods, and dismisses Sister.  The next year, after a few moments, the 2 words Sister chooses are, \"Hard Bed.\"  Again, Mother Superior nods, and dismisses Sister.  The 3rd year, Sister is ready as soon as Mother Superior says it's time, and blurts out, \"I Quit!\"  Mother Superior says, \"Well, I'm not surprised, you've done nothing but bitch since you got here!\"\n",
+      "A new Navy recruit has his first day on the submarine...\n",
+      "He speaks with the officer, who assigns him his post.  \"Go stand at the\n",
+      "periscope entry-way, and make sure no unauthorized personnel touch the\n",
+      "periscope.\"  The recruit follows orders, and stands by the periscope. After 15\n",
+      "minutes, the officer stops by.  \"Son I'm changing your post to the mess hall. Go\n",
+      "in there and start washing some dishes.\"  The recruit obeys, and heads to the\n",
+      "mess hall. He's cleaned about 3 dishes when the officer walks up again.  \"Listen\n",
+      "here recruit, your new post is in the supply room. I need you to make sure\n",
+      "everything is strapped down tight, in case of rough waters.\"  The recruit again\n",
+      "follows orders, and heads off to the supply room. There, he sees a crewman,\n",
+      "moving some boxes.  \"Hey there,\" says the recruit. \"is it normal to keep getting\n",
+      "reassigned to new posts all day? I haven't kept one position for more than 15\n",
+      "minutes!\"  The crewman says \"Oh yeah- this sub is full of reposts.\"\n",
       "\n",
-      "I just read that book written by the guy who was mauled by a grizzly. His name is\n",
-      "Claude Meearmoff\n",
+      "What did the reddit user say after detonating a bomb inside a bank?\n",
+      "EDIT: Wow! This blew up! Thanks for the gold!\n",
       "\n",
-      "An old man goes to confession\n",
-      "An old man goes to confession. He kneels down and says \"Bless me, father, for I have sinned. Last night, I had carnal relations with a nineteen-year-old girl.\"  The priest pauses. \"And how long has it been since your last confession?\"  \"I've never been here before.\"  \"How is this your first confession?\"  \"I'm Jewish.\"  \"Then... why are you telling me this?\"  \"Telling you? I'm telling everyone!\"\n",
+      "The only two white actors in Black Panther are Martin Freeman, who played Bilbo Baggins, and Andy Serkis who played Gollum.\n",
+      "They're the Tolkien white guys.  Edit: Apparently somebody posted this joke to\n",
+      "Twitter in October and that makes me a piece of shit.  ¯\\\\\\_(ツ)_/¯\n",
       "\n",
-      "The Cowboy’s Final Wishes\n",
-      "In 1881, in the Wild West, a cowboy is captured by a tribe of Native Americans and tied to a pole to be executed. The Natives ask the cowboy if he has any final wishes, the cowboy asks to speak to his horse one last time and set him free, and to hold off the execution until Sunday, since he wanted to die on a holy day.  The Natives grant this, the cowboy whispers some things to his horse, then lets him go. The horse gallops far away and out of sight. As Sunday approached, the horse returned, and on his back was a stunning, gorgeous blonde with the face of an angel and the body a man could only dream of. The horse stopped in front of the cowboy, and the cowboy yelled at his horse: “You deaf bastard, I told you to come back with my posse! POSSE!”\n",
+      "Ajit Pai.\n",
+      "That's it. That's the whole fucking joke.  EDIT: Removed edits, people don't\n",
+      "like those. [](/rdcry)\n",
       "\n",
-      "How did Dairy Queen get pregnant?\n",
-      "Burger King forgot to wrap his whopper\n",
+      "The 2016 US Presidential Election\n",
+      "That's it. That's the entire fucking joke.\n",
       "\n",
-      "Carrots are good for your eyes\n",
-      "But booze will double your vision\n",
+      "How many Trump supporters does it take to change a lightbulb?\n",
+      "None. Trump says it’s done and they all cheer in the dark.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "subreddit = reddit.subreddit(\"Jokes\")\n",
-    "posts_generator = subreddit.hot(limit=10)\n",
+    "posts_generator = subreddit.top(limit=10)\n",
     "for post in posts_generator:\n",
-    "    print(f\"{post.title}\"+ \"\\n\" + f\"{post.selftext}\".replace('\\n', ' ') + \"\\n\")"
+    "    print(f\"{post.title}\"+ \"\\n\" + textwrap.fill(post.selftext, 80) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, it turned Reddit API removed the feature to parse all posts from a subreddit. However, I found the dataset (https://github.com/orionw/rJokesData) which contains just the data I need.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "756810132.040112"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "from dateutil.relativedelta import relativedelta\n",
+    "\n",
+    "(datetime.datetime.now() - relativedelta(years=30)).timestamp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>joke</th>\n",
+       "      <th>body</th>\n",
+       "      <th>punchline</th>\n",
+       "      <th>score</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [joke, body, punchline, score, date]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"rJokesData/data/preprocessed.csv\")\n",
+    "df[df[\"date\"] > 1577923200]"
    ]
   },
   {
