Attempted to parse submitions after 2020, unsicsessfully. Began to create the model

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,35 +142,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, it turned Reddit API removed the feature to parse all posts from a subreddit. However, I found the dataset (https://github.com/orionw/rJokesData) which contains just the data I need.  "
+    "Unfortunately, it turned Reddit API removed the feature to parse all posts from a subreddit. However, I found the dataset (https://github.com/orionw/rJokesData) which contains just the data I need. However, it only contains posts from before Jan 1, 2020. When attempting to load the submissions after 2020, the submissions still load only from before 2020. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "756810132.040112"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import datetime\n",
-    "from dateutil.relativedelta import relativedelta\n",
-    "\n",
-    "(datetime.datetime.now() - relativedelta(years=30)).timestamp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -202,32 +179,82 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>308553</th>\n",
+       "      <td>2 aliens patrolling the universe looking for i...</td>\n",
+       "      <td>There are these 2 aliens, one new and one seas...</td>\n",
+       "      <td>2 aliens patrolling the universe looking for i...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.502544e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>507056</th>\n",
+       "      <td>A man walks onto a beach.. Says \"boy do I love...</td>\n",
+       "      <td>Says \"boy do I love drinking this whisky on th...</td>\n",
+       "      <td>A man walks onto a beach..</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.560242e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170369</th>\n",
+       "      <td>What's the easiest way to get a little head?  ...</td>\n",
+       "      <td>\\nThe Zika virus.\\n</td>\n",
+       "      <td>What's the easiest way to get a little head?</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>1.463868e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73148</th>\n",
+       "      <td>The fastest thing. Three friends are having a ...</td>\n",
+       "      <td>Three friends are having a conversation. One g...</td>\n",
+       "      <td>The fastest thing.</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.422806e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>356272</th>\n",
+       "      <td>Why can't Helen Keller play basketball? She's ...</td>\n",
+       "      <td>She's white</td>\n",
+       "      <td>Why can't Helen Keller play basketball?</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.518381e+09</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [joke, body, punchline, score, date]\n",
-       "Index: []"
+       "                                                     joke  \\\n",
+       "308553  2 aliens patrolling the universe looking for i...   \n",
+       "507056  A man walks onto a beach.. Says \"boy do I love...   \n",
+       "170369  What's the easiest way to get a little head?  ...   \n",
+       "73148   The fastest thing. Three friends are having a ...   \n",
+       "356272  Why can't Helen Keller play basketball? She's ...   \n",
+       "\n",
+       "                                                     body  \\\n",
+       "308553  There are these 2 aliens, one new and one seas...   \n",
+       "507056  Says \"boy do I love drinking this whisky on th...   \n",
+       "170369                                \\nThe Zika virus.\\n   \n",
+       "73148   Three friends are having a conversation. One g...   \n",
+       "356272                                        She's white   \n",
+       "\n",
+       "                                                punchline  score          date  \n",
+       "308553  2 aliens patrolling the universe looking for i...    4.0  1.502544e+09  \n",
+       "507056                         A man walks onto a beach..    3.0  1.560242e+09  \n",
+       "170369       What's the easiest way to get a little head?   95.0  1.463868e+09  \n",
+       "73148                                  The fastest thing.    2.0  1.422806e+09  \n",
+       "356272            Why can't Helen Keller play basketball?    1.0  1.518381e+09  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"rJokesData/data/preprocessed.csv\")\n",
-    "df[df[\"date\"] > 1577923200]"
+    "df.sample(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -246,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
