Created model 1.0, creates some text, but not really great

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/fadeevaaleksandra/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import praw\n",
     "import numpy as np\n",
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,44 +189,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>308553</th>\n",
-       "      <td>2 aliens patrolling the universe looking for i...</td>\n",
-       "      <td>There are these 2 aliens, one new and one seas...</td>\n",
-       "      <td>2 aliens patrolling the universe looking for i...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.502544e+09</td>\n",
+       "      <th>38959</th>\n",
+       "      <td>I used to have a real thing for posh spice.......</td>\n",
+       "      <td>It cost my mum a fortune in saffron.</td>\n",
+       "      <td>I used to have a real thing for posh spice....</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.397381e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>507056</th>\n",
-       "      <td>A man walks onto a beach.. Says \"boy do I love...</td>\n",
-       "      <td>Says \"boy do I love drinking this whisky on th...</td>\n",
-       "      <td>A man walks onto a beach..</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.560242e+09</td>\n",
+       "      <th>404923</th>\n",
+       "      <td>If a lawyer is defending the porn industry in ...</td>\n",
+       "      <td>...are they doing pro boner legal work?</td>\n",
+       "      <td>If a lawyer is defending the porn industry in ...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.532927e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>170369</th>\n",
-       "      <td>What's the easiest way to get a little head?  ...</td>\n",
-       "      <td>\\nThe Zika virus.\\n</td>\n",
-       "      <td>What's the easiest way to get a little head?</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>1.463868e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73148</th>\n",
-       "      <td>The fastest thing. Three friends are having a ...</td>\n",
-       "      <td>Three friends are having a conversation. One g...</td>\n",
-       "      <td>The fastest thing.</td>\n",
+       "      <th>127635</th>\n",
+       "      <td>Netflix and Chill or ... Redtube and Lube 😜</td>\n",
+       "      <td>Redtube and Lube 😜</td>\n",
+       "      <td>Netflix and Chill or ...</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.422806e+09</td>\n",
+       "      <td>1.446296e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>356272</th>\n",
-       "      <td>Why can't Helen Keller play basketball? She's ...</td>\n",
-       "      <td>She's white</td>\n",
-       "      <td>Why can't Helen Keller play basketball?</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.518381e+09</td>\n",
+       "      <th>31413</th>\n",
+       "      <td>Why don't electrical engineers get girls? Beca...</td>\n",
+       "      <td>Because they can resistor.</td>\n",
+       "      <td>Why don't electrical engineers get girls?</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1.381106e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214512</th>\n",
+       "      <td>Love me sister, I incest.</td>\n",
+       "      <td>I incest.</td>\n",
+       "      <td>Love me sister,</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.476580e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -225,28 +234,28 @@
       ],
       "text/plain": [
        "                                                     joke  \\\n",
-       "308553  2 aliens patrolling the universe looking for i...   \n",
-       "507056  A man walks onto a beach.. Says \"boy do I love...   \n",
-       "170369  What's the easiest way to get a little head?  ...   \n",
-       "73148   The fastest thing. Three friends are having a ...   \n",
-       "356272  Why can't Helen Keller play basketball? She's ...   \n",
+       "38959   I used to have a real thing for posh spice.......   \n",
+       "404923  If a lawyer is defending the porn industry in ...   \n",
+       "127635        Netflix and Chill or ... Redtube and Lube 😜   \n",
+       "31413   Why don't electrical engineers get girls? Beca...   \n",
+       "214512                         Love me sister, I incest.    \n",
        "\n",
-       "                                                     body  \\\n",
-       "308553  There are these 2 aliens, one new and one seas...   \n",
-       "507056  Says \"boy do I love drinking this whisky on th...   \n",
-       "170369                                \\nThe Zika virus.\\n   \n",
-       "73148   Three friends are having a conversation. One g...   \n",
-       "356272                                        She's white   \n",
+       "                                           body  \\\n",
+       "38959      It cost my mum a fortune in saffron.   \n",
+       "404923  ...are they doing pro boner legal work?   \n",
+       "127635                       Redtube and Lube 😜   \n",
+       "31413                Because they can resistor.   \n",
+       "214512                               I incest.    \n",
        "\n",
        "                                                punchline  score          date  \n",
-       "308553  2 aliens patrolling the universe looking for i...    4.0  1.502544e+09  \n",
-       "507056                         A man walks onto a beach..    3.0  1.560242e+09  \n",
-       "170369       What's the easiest way to get a little head?   95.0  1.463868e+09  \n",
-       "73148                                  The fastest thing.    2.0  1.422806e+09  \n",
-       "356272            Why can't Helen Keller play basketball?    1.0  1.518381e+09  "
+       "38959      I used to have a real thing for posh spice....    7.0  1.397381e+09  \n",
+       "404923  If a lawyer is defending the porn industry in ...    8.0  1.532927e+09  \n",
+       "127635                           Netflix and Chill or ...    2.0  1.446296e+09  \n",
+       "31413           Why don't electrical engineers get girls?   16.0  1.381106e+09  \n",
+       "214512                                    Love me sister,    2.0  1.476580e+09  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,6 +264,13 @@
     "df = pd.read_csv(\"rJokesData/data/preprocessed.csv\")\n",
     "df.sample(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -273,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
