Conducted some data analysis

--- a/language_model.ipynb
+++ b/language_model.ipynb
@@ -47,108 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>joke</th>\n",
-       "      <th>body</th>\n",
-       "      <th>punchline</th>\n",
-       "      <th>score</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>20508</th>\n",
-       "      <td>Did you hear about the guy from Prague wearing...</td>\n",
-       "      <td>The Czech's in the mail.</td>\n",
-       "      <td>Did you hear about the guy from Prague wearing...</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>1.361149e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77428</th>\n",
-       "      <td>Cannibal Someone who is fed up with people</td>\n",
-       "      <td>Someone who is fed up with people</td>\n",
-       "      <td>Cannibal</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.424818e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>316192</th>\n",
-       "      <td>I went to hell and I was playing video games S...</td>\n",
-       "      <td>Sucked since it was just never ending loading ...</td>\n",
-       "      <td>I went to hell and I was playing video games</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.504932e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84211</th>\n",
-       "      <td>Blowjobs did not live up to my expectations. T...</td>\n",
-       "      <td>They suck.</td>\n",
-       "      <td>Blowjobs did not live up to my expectations.</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.427739e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>264880</th>\n",
-       "      <td>There's a 86.7 percent chance of a Zombie outb...</td>\n",
-       "      <td>Hopefully the first zombie is black.</td>\n",
-       "      <td>There's a 86.7 percent chance of a Zombie outb...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.489582e+09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                     joke  \\\n",
-       "20508   Did you hear about the guy from Prague wearing...   \n",
-       "77428          Cannibal Someone who is fed up with people   \n",
-       "316192  I went to hell and I was playing video games S...   \n",
-       "84211   Blowjobs did not live up to my expectations. T...   \n",
-       "264880  There's a 86.7 percent chance of a Zombie outb...   \n",
-       "\n",
-       "                                                     body  \\\n",
-       "20508                            The Czech's in the mail.   \n",
-       "77428                   Someone who is fed up with people   \n",
-       "316192  Sucked since it was just never ending loading ...   \n",
-       "84211                                          They suck.   \n",
-       "264880               Hopefully the first zombie is black.   \n",
-       "\n",
-       "                                                punchline  score          date  \n",
-       "20508   Did you hear about the guy from Prague wearing...   64.0  1.361149e+09  \n",
-       "77428                                            Cannibal    0.0  1.424818e+09  \n",
-       "316192       I went to hell and I was playing video games    0.0  1.504932e+09  \n",
-       "84211        Blowjobs did not live up to my expectations.    5.0  1.427739e+09  \n",
-       "264880  There's a 86.7 percent chance of a Zombie outb...    2.0  1.489582e+09  "
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/fadeevaaleksandra/Desktop/Joking-Language-Model/language_model.ipynb Ячейка 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/fadeevaaleksandra/Desktop/Joking-Language-Model/language_model.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mrJokesData/data/preprocessed.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fadeevaaleksandra/Desktop/Joking-Language-Model/language_model.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mdropna(axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/fadeevaaleksandra/Desktop/Joking-Language-Model/language_model.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df\u001b[39m.\u001b[39msample(\u001b[39m5\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
