--- a/parser.ipynb
+++ b/parser.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,44 +189,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>38959</th>\n",
-       "      <td>I used to have a real thing for posh spice.......</td>\n",
-       "      <td>It cost my mum a fortune in saffron.</td>\n",
-       "      <td>I used to have a real thing for posh spice....</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.397381e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>404923</th>\n",
-       "      <td>If a lawyer is defending the porn industry in ...</td>\n",
-       "      <td>...are they doing pro boner legal work?</td>\n",
-       "      <td>If a lawyer is defending the porn industry in ...</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.532927e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>127635</th>\n",
-       "      <td>Netflix and Chill or ... Redtube and Lube 😜</td>\n",
-       "      <td>Redtube and Lube 😜</td>\n",
-       "      <td>Netflix and Chill or ...</td>\n",
+       "      <th>253941</th>\n",
+       "      <td>Doctor! I think I have a concussion! Doctor: \"...</td>\n",
+       "      <td>Doctor: \"Dont worry, Its all in your head\"</td>\n",
+       "      <td>Doctor! I think I have a concussion!</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1.446296e+09</td>\n",
+       "      <td>1.486609e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31413</th>\n",
-       "      <td>Why don't electrical engineers get girls? Beca...</td>\n",
-       "      <td>Because they can resistor.</td>\n",
-       "      <td>Why don't electrical engineers get girls?</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.381106e+09</td>\n",
+       "      <th>145992</th>\n",
+       "      <td>Why is it easier to pick a prime minister than...</td>\n",
+       "      <td>Because there's only 2 factors involved.</td>\n",
+       "      <td>Why is it easier to pick a prime minister than...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.453756e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>214512</th>\n",
-       "      <td>Love me sister, I incest.</td>\n",
-       "      <td>I incest.</td>\n",
-       "      <td>Love me sister,</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.476580e+09</td>\n",
+       "      <th>491215</th>\n",
+       "      <td>Did you hear about the mathematician who’s afr...</td>\n",
+       "      <td>He’ll stop at nothing to avoid them</td>\n",
+       "      <td>Did you hear about the mathematician who’s afr...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.556390e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>493888</th>\n",
+       "      <td>Have you heard of soundcloud for deaf people? ...</td>\n",
+       "      <td>They haven't.</td>\n",
+       "      <td>Have you heard of soundcloud for deaf people?</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.557061e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117901</th>\n",
+       "      <td>\"Son, I have some good news and some bad news....</td>\n",
+       "      <td>\"OK...\" he hesitated.\\n\\n\"Well, the good news ...</td>\n",
+       "      <td>\"Son, I have some good news and some bad news.\"</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>1.442510e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -234,28 +234,28 @@
       ],
       "text/plain": [
        "                                                     joke  \\\n",
-       "38959   I used to have a real thing for posh spice.......   \n",
-       "404923  If a lawyer is defending the porn industry in ...   \n",
-       "127635        Netflix and Chill or ... Redtube and Lube 😜   \n",
-       "31413   Why don't electrical engineers get girls? Beca...   \n",
-       "214512                         Love me sister, I incest.    \n",
+       "253941  Doctor! I think I have a concussion! Doctor: \"...   \n",
+       "145992  Why is it easier to pick a prime minister than...   \n",
+       "491215  Did you hear about the mathematician who’s afr...   \n",
+       "493888  Have you heard of soundcloud for deaf people? ...   \n",
+       "117901  \"Son, I have some good news and some bad news....   \n",
        "\n",
-       "                                           body  \\\n",
-       "38959      It cost my mum a fortune in saffron.   \n",
-       "404923  ...are they doing pro boner legal work?   \n",
-       "127635                       Redtube and Lube 😜   \n",
-       "31413                Because they can resistor.   \n",
-       "214512                               I incest.    \n",
+       "                                                     body  \\\n",
+       "253941         Doctor: \"Dont worry, Its all in your head\"   \n",
+       "145992           Because there's only 2 factors involved.   \n",
+       "491215                He’ll stop at nothing to avoid them   \n",
+       "493888                                      They haven't.   \n",
+       "117901  \"OK...\" he hesitated.\\n\\n\"Well, the good news ...   \n",
        "\n",
        "                                                punchline  score          date  \n",
-       "38959      I used to have a real thing for posh spice....    7.0  1.397381e+09  \n",
-       "404923  If a lawyer is defending the porn industry in ...    8.0  1.532927e+09  \n",
-       "127635                           Netflix and Chill or ...    2.0  1.446296e+09  \n",
-       "31413           Why don't electrical engineers get girls?   16.0  1.381106e+09  \n",
-       "214512                                    Love me sister,    2.0  1.476580e+09  "
+       "253941               Doctor! I think I have a concussion!    2.0  1.486609e+09  \n",
+       "145992  Why is it easier to pick a prime minister than...   10.0  1.453756e+09  \n",
+       "491215  Did you hear about the mathematician who’s afr...   10.0  1.556390e+09  \n",
+       "493888      Have you heard of soundcloud for deaf people?    1.0  1.557061e+09  \n",
+       "117901    \"Son, I have some good news and some bad news.\"  158.0  1.442510e+09  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
